사진 1개->3개로 추가

--- a/html/article.html
+++ b/html/article.html
@@ -26,16 +26,24 @@
     <!-- 내용 표시할 main -->
     <div id="main">
         <div class="content_space">
-            <img src="1.jpg" width="20%" alt="기사 사진" class="article_image">
+            <img src="1.jpg" width="20%" alt="기사 사진" class="article_image" align="left" vspace="2" hspace="50">
             <figcaption>
                 <h4>기사 제목</h4>
-                <p>기사 요약(네이버처럼)</p>
+                <p>기사 요약(네이버처럼) Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
+                </p>
             </figcaption>
-<!--             <img src="2.jpg" width="20%" alt="기사 사진" class="article_image">
+            <img src="2.jpg" width="20%" alt="기사 사진" class="article_image" align="left" vspace="2" hspace="50">
             <figcaption>
                 <h4>기사 제목</h4>
-                <p>기사 요약(네이버처럼)</p>
-            </figcaption> -->
+                <p>기사 요약(네이버처럼)Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean vulputate eleifend tellus.
+                </p>
+            </figcaption>
+            <img src="3.jpg" width="20%" alt="기사 사진" class="article_image" align="left" vspace="2" hspace="50">
+            <figcaption>
+                <h4>기사 제목</h4>
+                <p>기사 요약(네이버처럼)ellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidu
+                </p>
+            </figcaption>
         </div>
     </div>
     <!-- 그외 잡다한거 -->
@@ -46,6 +54,11 @@
             <a href="#">의견보내기</a>
         </div>
     </div>
+    <!-- 위로 가기 화살표
+     -->
+    <!-- <div id="uparrow" style="position: fixed; bottom:5px; left: 300px;">
+    <a href="#header"><img src="uparrow.png" alt="맨위로 올라가기" width="10%"></a>
+</div> -->
 </body>
 
 </html>
