두번째 페이지 세문장정도씩 보여주기. 키워드를 상단에 보여주고 눌렀을때 새로고침 가능하게 링크 걸어

--- a/html/article.html
+++ b/html/article.html
@@ -16,7 +16,7 @@
     <div id="header">
         <div class="a_main">
             <h1>
-                <a href="main.html"> 헤드라인
+                <a href="index.html"> 헤드라인
                 </a>
         </h1>
         </div>
@@ -25,25 +25,19 @@
     </div>
     <!-- 내용 표시할 main -->
     <div id="main">
+        <div class="display_keyword">
+            <a href="#">
+                <h2>키워드 표시</h2></a>
+            <!-- 누르면 새로고침되게 만들고 싶음-->
+        </div>
+
         <div class="content_space">
-            <img src="1.jpg" width="20%" alt="기사 사진" class="article_image" align="left" vspace="2" hspace="50">
-            <figcaption>
-                <h4>기사 제목</h4>
-                <p>기사 요약(네이버처럼) Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
-                </p>
-            </figcaption>
-            <img src="2.jpg" width="20%" alt="기사 사진" class="article_image" align="left" vspace="2" hspace="50">
-            <figcaption>
-                <h4>기사 제목</h4>
-                <p>기사 요약(네이버처럼)Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean vulputate eleifend tellus.
-                </p>
-            </figcaption>
-            <img src="3.jpg" width="20%" alt="기사 사진" class="article_image" align="left" vspace="2" hspace="50">
-            <figcaption>
-                <h4>기사 제목</h4>
-                <p>기사 요약(네이버처럼)ellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidu
-                </p>
-            </figcaption>
+            <p> 가는 청춘을 살았으며, 피는 이것이다. 얼음과 속에 생명을 때까지 길지 예수는 평화스러운 약동하다. 것은 든 수 눈이 그들을 피어나는 새가 생의 약동하다. 있는 우리의 무엇을 봄바람이다. 역사를 그것은 사라지지 피다. 많이 우리는 싹이 예수는 커다란 이성은 무엇이 구할 것이다.
+            </p>
+            <p>그들의 이상의 끓는 끓는 사람은 없으면, 아니한 인생의 품에 황금시대다. 열락의 행복스럽고 가장 맺어, 자신과 있으랴? 같은 수 이성은 끝에 소리다.이것은 인간의 이것이다. 청춘이 갑 무엇이 이것이다. 수 물방아 싶이 고행을 황금시대의 봄바람이다.
+            </p>
+            <p>그것은 만물은 용기가 그들의 간에 품에 아니다. 있는 돋고, 무한한 피다. 살 것은 뜨고, 그와 뭇 귀는 얼마나 투명하되 봄바람이다. 방황하여도, 되는 싸인 대고, 듣는다. 지혜는 현저하게 이는 그러므로 보배를 말이다. 커다란 인간은 설산에서 너의 동산에는 광야에서 위하여서, 위하여서.
+            </p>
         </div>
     </div>
     <!-- 그외 잡다한거 -->
