a요소와 h1 요소 순서를 바

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>헤드라인</title>
-
     <style>
     text:hover {
         stroke: black;
@@ -23,9 +22,7 @@
     <!-- Headline을 표시할 부분 -->
     <div id="header">
         <div class="a_main">
-            <a href="index.html">
-                <h1>헤드라인 </h1>
-            </a>
+            <h1><a href="index.html">헤드라인 </a></h1>
         </div>
         <div class="header_border">
         </div>
