프로젝트 로고 추가, 파비콘 수정, 프로젝트 로고 아래 설명 추

--- a/html/article.html
+++ b/html/article.html
@@ -6,31 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel='stylesheet' href='style.css'>
     <link rel='reset' href='reset.css'>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="logo_kor.ico" type="image/x-icon">
+    <link rel="icon" href="logo_kor.ico" type="image/x-icon">
     <title>헤드라인</title>
 </head>
 
 <body>
     <!-- Headline을 표시할 부분 -->
     <div id="header">
-        <div class="a_main">
-            <h1>
-                <a href="index.html"> 헤드라인
-                </a>
-        </h1>
+        <div class="logo_title">
+            <h1><a href="index.html"><img src="logo_kor.png" alt="로고"> </a></h1>
         </div>
-        <div class="header_border">
+        <div class="logo_subtitle">
+            <h2>세상의 모든 세 줄 기사</h2>
         </div>
     </div>
     <!-- 내용 표시할 main -->
     <div id="main">
         <div class="display_keyword">
-            <a href="#">
-                <h2>키워드 표시</h2></a>
+            <h3><a href="#">키워드 표시</a></h3>
             <!-- 누르면 새로고침되게 만들고 싶음-->
         </div>
-
         <div class="content_space">
             <p> 가는 청춘을 살았으며, 피는 이것이다. 얼음과 속에 생명을 때까지 길지 예수는 평화스러운 약동하다. 것은 든 수 눈이 그들을 피어나는 새가 생의 약동하다. 있는 우리의 무엇을 봄바람이다. 역사를 그것은 사라지지 피다. 많이 우리는 싹이 예수는 커다란 이성은 무엇이 구할 것이다.
             </p>
@@ -42,11 +38,7 @@
     </div>
     <!-- 그외 잡다한거 -->
     <div id="footer">
-        <p>이부분은 아래에 나중에 들어갈 것을 위해서 남겨둔 부분입니다. 없애고 붙이기가 자유로운 부분입니다.</p>
-        <div class="help">
-            <a href="#">도움말</a>
-            <a href="#">의견보내기</a>
-        </div>
+        <p>이화여자대학교 컴퓨터공학과 졸업프로젝트 <a href="#">헤드라인</a></p>
     </div>
     <!-- 위로 가기 화살표
      -->
