--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel='stylesheet' href='style.css'>
     <link rel='reset' href='reset.css'>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="logo_kor.ico" type="image/x-icon">
+    <link rel="icon" href="logo_kor.ico" type="image/x-icon">
     <title>헤드라인</title>
     <style>
     text:hover {
@@ -21,10 +21,11 @@
 <body>
     <!-- Headline을 표시할 부분 -->
     <div id="header">
-        <div class="a_main">
-            <h1><a href="index.html">헤드라인 </a></h1>
+        <div class="logo_title">
+            <h1><a href="index.html"><img src="logo_kor.png" alt="로고"> </a></h1>
         </div>
-        <div class="header_border">
+        <div class="logo_subtitle">
+            <h2>세상의 모든 세 줄 기사</h2>
         </div>
     </div>
     <!-- 내용 표시할 main -->
@@ -32,14 +33,14 @@
         <div id="cloud"></div>
         <script type="text/javascript">
         var weight = 3, // change me
-            width = 960,
+            width = 900,
             height = 500;
 
         var fill = d3.scale.category20();
         d3.csv("words.csv", function(d) {
                 return {
                     text: d.word,
-                    size: +d.freq / 100 * weight
+                    size: +d.freq / 10 * weight
                 }
             },
             function(data) {
@@ -55,6 +56,7 @@
                     d3.select("#cloud").append("svg")
                         .attr("width", width)
                         .attr("height", height)
+                        // .attr("onclick",function(d) { alert(d+"!!!"); })
                         .append("g")
                         .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")")
                         .selectAll("text")
@@ -74,11 +76,7 @@
     </div>
     <!-- 그외 잡다한거 -->
     <div id="footer">
-        <p>이부분은 아래에 나중에 들어갈 것을 위해서 남겨둔 부분입니다. 없애고 붙이기가 자유로운 부분입니다.</p>
-        <div class="help">
-            <a href="#">도움말</a>
-            <a href="#">의견보내기</a>
-        </div>
+        <p>이화여자대학교 컴퓨터공학과 졸업프로젝트 <a href="#">헤드라인</a></p>
     </div>
 </body>
 
