--- a/html/article.html
+++ b/html/article.html
@@ -24,15 +24,28 @@
     <!-- 내용 표시할 main -->
     <div id="main">
         <div class="display_keyword">
-            <h3><a href="#">키워드 표시</a></h3>
+            <h3><a href="#">대통령</a></h3>
+
             <!-- 누르면 새로고침되게 만들고 싶음-->
         </div>
         <div class="content_space">
-            <p> 가는 청춘을 살았으며, 피는 이것이다. 얼음과 속에 생명을 때까지 길지 예수는 평화스러운 약동하다. 것은 든 수 눈이 그들을 피어나는 새가 생의 약동하다. 있는 우리의 무엇을 봄바람이다. 역사를 그것은 사라지지 피다. 많이 우리는 싹이 예수는 커다란 이성은 무엇이 구할 것이다.
+        <div style="clear:both;"><br /></div>
+        <h4 align="left">첫번째 뉴스</h4>
+            <p>
+            <a href="#">국가 차원의 AI 우월성 경쟁이 제3차 세계대전의 원인이 될 가능성이 있다”라고 우려했다. 같은 날 머스크는 또 다른 트윗을 통해 “국가 지도자들이 아닌 AI가 전쟁을 벌이기 시작할 수도 있다. 지난주 골드만삭스는 한 보고서를 통해 중국이 AI 분야에서 미국을 따라잡을 가능성이 있다고 전망했다. 골드만삭스는 “우리는 중국정부의 국책 어젠다에 AI가 우선순위로 올라 있는 것으로 판단하고 있다 AI가 3차 세계대전을 촉발시킬 수 있다는 경고가 나온 것도 이번이 처음이 아니다. 
+            </a>
             </p>
-            <p>그들의 이상의 끓는 끓는 사람은 없으면, 아니한 인생의 품에 황금시대다. 열락의 행복스럽고 가장 맺어, 자신과 있으랴? 같은 수 이성은 끝에 소리다.이것은 인간의 이것이다. 청춘이 갑 무엇이 이것이다. 수 물방아 싶이 고행을 황금시대의 봄바람이다.
+            <h4 align="left">두번째 뉴스</h4>
+            <p><a href="#">김 의원이 말한 '북한이 빠뜨린 기술'은 ICBM 개발의 마지막 단계로 여겨지는 ‘대기권 재진입 기술’이다. 김종대 정의당 의원이 “북한이 빠뜨린 기술이 있다”라며 아직 문재인 대통령이 설정한 레드라인에 근접하지 못 했다고 말했다. 김 의원 또한 “공기의 빠른 마찰을 이겨내는 기술을 상마기술이라고 한다.
+            </a>
             </p>
-            <p>그것은 만물은 용기가 그들의 간에 품에 아니다. 있는 돋고, 무한한 피다. 살 것은 뜨고, 그와 뭇 귀는 얼마나 투명하되 봄바람이다. 방황하여도, 되는 싸인 대고, 듣는다. 지혜는 현저하게 이는 그러므로 보배를 말이다. 커다란 인간은 설산에서 너의 동산에는 광야에서 위하여서, 위하여서.
+            <h4 align="left">세번째 뉴스</h4>
+            <p><a href="#">10월 2일 임시공휴일 지정이 5일 확정된 가운데, 은행 및 병원 휴무 여부가 관심을 모으고 있다. 인사혁신처(처장 김판석)는 문재인 대통령 주재로 이날 오전 청와대에서 열린 제39회 국무회의에서 ‘10월2일 임시공휴일 지정안’이 상정·의결됐다고 밝혔다. 이로 인해 토요일인 9월 30일부터 월요일인 10월 9일까지 최장 열흘간 쉴 수 있게 됐다. 10월2일 월요일은 일요일(1일)과 공휴일인 개천절(3일) 사이에 낀 평일이었으나, 지정안의 국무회의 통과로 임시공휴일로 지정됐다.
+            </a>
+            </p>
+            <h4 align="left">네번째 뉴스</h4>
+            <p><a href="#">그는 “이제 결집해서 반등할 일만 남았다”며 “우리가 이 나라가 파멸의 길로 가는 것은 막아야 하지 않겠나 이후 18~22일에는 미국 뉴욕을 방문, 19일 개막하는 유엔 총회에서 기조연설을 한다. 홍 대표는 “국익을 위해 해외에 나가는데 여야를 떠나 국내에서 장외투쟁하는 것은 옳지 않다고 생각한다”면서 “그렇지 않을 때는 더욱 가열차게 방송장악 포기, 대북정책 수정 그 두 가지 목표로 장외투쟁을 이어가야 한다”고 주문했다. 그는 “우리가 장외투쟁에 나선 것은 12년만”이라며 “노무현 정부의 사학법 개정에 맞서서 넉 달간 장외투쟁을 한 일이 있다”고 말했다. 홍 대표는 “지금 정치 환경이 굉장히 나쁘다. 그것은 우리가 모두 명심해야 한다”고 강조했다.
+            </a>
             </p>
         </div>
     </div>
