--- a/html/index.html
+++ b/html/index.html
@@ -33,14 +33,15 @@
         <div id="cloud"></div>
         <script type="text/javascript">
         var weight = 3, // change me
-            width = 900,
-            height = 500;
-
+            width = 500,
+            height = 300;
+            //워드클라우드 창
         var fill = d3.scale.category20();
         d3.csv("words.csv", function(d) {
                 return {
                     text: d.word,
-                    size: +d.freq / 10 * weight
+                    size: +d.freq / 80 * weight
+                    //글씨 사이즈 : 숫자가 커질수록 글씨가 작아짐
                 }
             },
             function(data) {
@@ -51,14 +52,13 @@
                     .fontSize(function(d) { return d.size; })
                     .on("end", draw)
                     .start();
-
                 function draw(words) {
                     d3.select("#cloud").append("svg")
                         .attr("width", width)
                         .attr("height", height)
-                        // .attr("onclick",function(d) { alert(d+"!!!"); })
                         .append("g")
                         .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")")
+                        //워드클라우드 위치
                         .selectAll("text")
                         .data(words)
                         .enter().append("text")
