--- a/html/news_list.html
+++ b/html/news_list.html
@@ -24,33 +24,21 @@
     <!-- 내용 표시할 main -->
     <div id="main">
         <div class="display_keyword">
-            <h3><a href="#">Keyword</a></h3>
-            <!-- 누르면 새로고침되게 만들고 싶음-->
+            <h3><a href="#">keyword</a></h3>
         </div>
         <div class="content_space">
             <div style="clear:both;">
                 <br />
             </div>
             <!-- 기사 나열 -->
-            <ul id="article_list_big">
-                <ul class="article_list_small">
-                    <a href="#">
-                        <li class="article_title">첫번째 기사 제목</li>
-                        <li>첫번째 기사 내용</li>
-                    </a>
+            <ul id="news_list_big">
+                {% for news in object_list %}
+                <ul class="news_list_small"><a href="{{news.url}}"></a>
+                    <li>news.sentence1 </li>
+                    <li>news.sentence2 </li>
+                    <li>news.sentence3 </li>
                 </ul>
-                <ul class="article_list_small">
-                    <a href="#">
-                        <li class="article_title">두번째 기사 제목</li>
-                        <li>두번째 기사 내용</li>
-                    </a>
-                </ul>
-                <ul class="article_list_small">
-                    <a href="#">
-                        <li class="article_title">세번째 기사 제목</li>
-                        <li>세번째 기사 내용</li>
-                    </a>
-                </ul>
+                {% endfor %}
             </ul>
         </div>
     </div>
